--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Elm App</title>
+    <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
+    <title>FP Meetup Kata 01</title>
 </head>
 <body>
     <noscript>
